--- a/task/src/main/resources/application.properties
+++ b/task/src/main/resources/application.properties
@@ -10,8 +10,4 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 
 #App
-app.cordinate_x_max=11
-app.cordinate_y_max=11
-app.value_miliseconds=10000
-app.msg_on_route =The vehicle is on route!
-app.msg_wrong_way =Wrong way!
+app.pathFile=D:/Workspaces/task/src/main/resources/convertcsv.csv
